--- a/src/rm-materials/carousel/carousel.component.html
+++ b/src/rm-materials/carousel/carousel.component.html
@@ -12,13 +12,11 @@
 <span *ngIf="current.image && current.image.loading" class="sr-only">Loading...</span>
 
 <!-- Navigation -->
-<a class="prev" (click)="prev()" [class.hidden-xs-up]="!current.index"
-                                 [class.disabled]="current.image && current.image.busy">
+<a class="prev" (click)="prev()" [class.hidden]="!current.index">
   <i class="fa fa-chevron-left fa-3x" aria-hidden="true"></i>
   <span class="sr-only">Previous</span>
 </a>
-<a class="next" (click)="next()" [class.hidden-xs-up]="!current.image || !images || !images.length || images.length == ( current.index + 1)"
-                                 [class.disabled]="current.image && current.image.busy">
+<a class="next" (click)="next()" [class.hidden]="!current.image || !images || !images.length || images.length == ( current.index + 1)">
   <i class="fa fa-chevron-right fa-3x" aria-hidden="true"></i>
   <span class="sr-only">Next</span>
 </a>
